# NaukriApply

./: .gitignore  README.md  pyproject.toml
naukri_assistant/: __init__.py  answers.py  browser.py  cli.py  logging_utils.py  matching.py  models.py  reports.py  resume.py  storage.py  text_utils.py  workflow.py
scripts/: setup.ps1
tests/: test_answers.py  test_browser_fixture_flows.py  test_browser_helpers.py  test_cli_helpers.py  test_matching.py  test_reports.py  test_resume.py  test_storage.py  test_workflow.py
