[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "naukri-apply-assistant"
version = "0.1.0"
description = "Approval-gated Naukri job review and application assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1.5",
  "playwright>=1.52.0",
  "pydantic>=2.11.0",
  "rich>=14.0.0",
  "pypdf>=5.5.0",
  "python-docx>=1.1.2",
  "rapidfuzz>=3.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
naukri-assistant = "naukri_assistant.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["naukri_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
